# ListAndMorphs

./: CMakeLists.txt  Morphs.cpp  Morphs.hpp  SelfOrganizingList.hpp  main.cpp
